smallrace/utils/parser/SmalltalkParser.cpp

// Generated from /home/aaron/smallrace/utils/parser/Smalltalk.g4 by ANTLR 4.9


#include "SmalltalkListener.h"
#include "SmalltalkVisitor.h"

#include "SmalltalkParser.h"


using namespace antlrcpp;
using namespace antlr4;

SmalltalkParser::SmalltalkParser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

SmalltalkParser::~SmalltalkParser() {
  delete _interpreter;
}

std::string SmalltalkParser::getGrammarFileName() const {
  return "Smalltalk.g4";
}

const std::vector<std::string>& SmalltalkParser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& SmalltalkParser::getVocabulary() const {
  return _vocabulary;
}


//----------------- ModuleContext ------------------------------------------------------------------

SmalltalkParser::ModuleContext::ModuleContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

SmalltalkParser::FunctionContext* SmalltalkParser::ModuleContext::function() {
  return getRuleContext<SmalltalkParser::FunctionContext>(0);
}

SmalltalkParser::ScriptContext* SmalltalkParser::ModuleContext::script() {
  return getRuleContext<SmalltalkParser::ScriptContext>(0);
}


size_t SmalltalkParser::ModuleContext::getRuleIndex() const {
  return SmalltalkParser::RuleModule;
}

void SmalltalkParser::ModuleContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SmalltalkListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterModule(this);
}

void SmalltalkParser::ModuleContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SmalltalkListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitModule(this);
}


antlrcpp::Any SmalltalkParser::ModuleContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SmalltalkVisitor*>(visitor))
    return parserVisitor->visitModule(this);
  else
    return visitor->visitChildren(this);
}

SmalltalkParser::ModuleContext* SmalltalkParser::module() {
  ModuleContext *_localctx = _tracker.createInstance<ModuleContext>(_ctx, getState());
  enterRule(_localctx, 0, SmalltalkParser::RuleModule);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(112);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 0, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(110);
      function();
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(111);
      script();
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- FunctionContext ------------------------------------------------------------------

SmalltalkParser::FunctionContext::FunctionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

SmalltalkParser::FuncdeclContext* SmalltalkParser::FunctionContext::funcdecl() {
  return getRuleContext<SmalltalkParser::FuncdeclContext>(0);
}

tree::TerminalNode* SmalltalkParser::FunctionContext::EOF() {
  return getToken(SmalltalkParser::EOF, 0);
}

SmalltalkParser::ScriptContext* SmalltalkParser::FunctionContext::script() {
  return getRuleContext<SmalltalkParser::ScriptContext>(0);
}

SmalltalkParser::WsContext* SmalltalkParser::FunctionContext::ws() {
  return getRuleContext<SmalltalkParser::WsContext>(0);
}


size_t SmalltalkParser::FunctionContext::getRuleIndex() const {
  return SmalltalkParser::RuleFunction;
}

void SmalltalkParser::FunctionContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SmalltalkListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterFunction(this);
}

void SmalltalkParser::FunctionContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SmalltalkListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitFunction(this);
}


antlrcpp::Any SmalltalkParser::FunctionContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SmalltalkVisitor*>(visitor))
    return parserVisitor->visitFunction(this);
  else
    return visitor->visitChildren(this);
}

SmalltalkParser::FunctionContext* SmalltalkParser::function() {
  FunctionContext *_localctx = _tracker.createInstance<FunctionContext>(_ctx, getState());
  enterRule(_localctx, 2, SmalltalkParser::RuleFunction);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(114);
    funcdecl();
    setState(116);
    _errHandler->sync(this);

    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 1, _ctx)) {
    case 1: {
      setState(115);
      ws();
      break;
    }

    default:
      break;
    }
    setState(120);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case SmalltalkParser::EOF: {
        setState(118);
        match(SmalltalkParser::EOF);
        break;
      }

      case SmalltalkParser::SEPARATOR:
      case SmalltalkParser::STRING:
      case SmalltalkParser::PRIMITIVE:
      case SmalltalkParser::COMMENT:
      case SmalltalkParser::BLOCK_START:
      case SmalltalkParser::OPEN_PAREN:
      case SmalltalkParser::PIPE2:
      case SmalltalkParser::PIPE:
      case SmalltalkParser::MINUS:
      case SmalltalkParser::RESERVED_WORD:
      case SmalltalkParser::IDENTIFIER:
      case SmalltalkParser::IDENTIFIER2:
      case SmalltalkParser::CARROT:
      case SmalltalkParser::UNDERSCORE:
      case SmalltalkParser::UNDERSCORE2:
      case SmalltalkParser::HASH:
      case SmalltalkParser::DOLLAR:
      case SmalltalkParser::HEXNUM:
      case SmalltalkParser::INTNUM:
      case SmalltalkParser::DYNDICT_START:
      case SmalltalkParser::DYNARR_START:
      case SmalltalkParser::CHARACTER_CONSTANT: {
        setState(119);
        script();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- FuncdeclContext ------------------------------------------------------------------

SmalltalkParser::FuncdeclContext::FuncdeclContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* SmalltalkParser::FuncdeclContext::IDENTIFIER() {
  return getToken(SmalltalkParser::IDENTIFIER, 0);
}

SmalltalkParser::WsContext* SmalltalkParser::FuncdeclContext::ws() {
  return getRuleContext<SmalltalkParser::WsContext>(0);
}

SmalltalkParser::DeclPairsContext* SmalltalkParser::FuncdeclContext::declPairs() {
  return getRuleContext<SmalltalkParser::DeclPairsContext>(0);
}

SmalltalkParser::VariableContext* SmalltalkParser::FuncdeclContext::variable() {
  return getRuleContext<SmalltalkParser::VariableContext>(0);
}

tree::TerminalNode* SmalltalkParser::FuncdeclContext::MINUS() {
  return getToken(SmalltalkParser::MINUS, 0);
}

tree::TerminalNode* SmalltalkParser::FuncdeclContext::PIPE() {
  return getToken(SmalltalkParser::PIPE, 0);
}

tree::TerminalNode* SmalltalkParser::FuncdeclContext::PIPE2() {
  return getToken(SmalltalkParser::PIPE2, 0);
}

tree::TerminalNode* SmalltalkParser::FuncdeclContext::PIPE3() {
  return getToken(SmalltalkParser::PIPE3, 0);
}

tree::TerminalNode* SmalltalkParser::FuncdeclContext::AMP() {
  return getToken(SmalltalkParser::AMP, 0);
}

tree::TerminalNode* SmalltalkParser::FuncdeclContext::BINARY_SELECTOR() {
  return getToken(SmalltalkParser::BINARY_SELECTOR, 0);
}

tree::TerminalNode* SmalltalkParser::FuncdeclContext::NEQ() {
  return getToken(SmalltalkParser::NEQ, 0);
}

tree::TerminalNode* SmalltalkParser::FuncdeclContext::LLT() {
  return getToken(SmalltalkParser::LLT, 0);
}

tree::TerminalNode* SmalltalkParser::FuncdeclContext::GGT() {
  return getToken(SmalltalkParser::GGT, 0);
}

tree::TerminalNode* SmalltalkParser::FuncdeclContext::LTE() {
  return getToken(SmalltalkParser::LTE, 0);
}

tree::TerminalNode* SmalltalkParser::FuncdeclContext::GTE() {
  return getToken(SmalltalkParser::GTE, 0);
}

tree::TerminalNode* SmalltalkParser::FuncdeclContext::LT() {
  return getToken(SmalltalkParser::LT, 0);
}

tree::TerminalNode* SmalltalkParser::FuncdeclContext::GT() {
  return getToken(SmalltalkParser::GT, 0);
}


size_t SmalltalkParser::FuncdeclContext::getRuleIndex() const {
  return SmalltalkParser::RuleFuncdecl;
}

void SmalltalkParser::FuncdeclContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SmalltalkListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterFuncdecl(this);
}

void SmalltalkParser::FuncdeclContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SmalltalkListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitFuncdecl(this);
}


antlrcpp::Any SmalltalkParser::FuncdeclContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SmalltalkVisitor*>(visitor))
    return parserVisitor->visitFuncdecl(this);
  else
    return visitor->visitChildren(this);
}

SmalltalkParser::FuncdeclContext* SmalltalkParser::funcdecl() {
  FuncdeclContext *_localctx = _tracker.createInstance<FuncdeclContext>(_ctx, getState());
  enterRule(_localctx, 4, SmalltalkParser::RuleFuncdecl);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(132);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 5, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(123);
      _errHandler->sync(this);

      _la = _input->LA(1);
      if (_la == SmalltalkParser::SEPARATOR

      || _la == SmalltalkParser::COMMENT) {
        setState(122);
        ws();
      }
      setState(125);
      match(SmalltalkParser::IDENTIFIER);
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(126);
      declPairs();
      break;
    }

    case 3: {
      enterOuterAlt(_localctx, 3);
      setState(127);
      _la = _input->LA(1);
      if (!((((_la & ~ 0x3fULL) == 0) &&
        ((1ULL << _la) & ((1ULL << SmalltalkParser::PIPE3)
        | (1ULL << SmalltalkParser::PIPE2)
        | (1ULL << SmalltalkParser::PIPE)
        | (1ULL << SmalltalkParser::LLT)
        | (1ULL << SmalltalkParser::GGT)
        | (1ULL << SmalltalkParser::LTE)
        | (1ULL << SmalltalkParser::GTE)
        | (1ULL << SmalltalkParser::NEQ)
        | (1ULL << SmalltalkParser::LT)
        | (1ULL << SmalltalkParser::GT)
        | (1ULL << SmalltalkParser::AMP)
        | (1ULL << SmalltalkParser::MINUS)
        | (1ULL << SmalltalkParser::BINARY_SELECTOR))) != 0))) {
      _errHandler->recoverInline(this);
      }
      else {
        _errHandler->reportMatch(this);
        consume();
      }
      setState(129);
      _errHandler->sync(this);

      _la = _input->LA(1);
      if (_la == SmalltalkParser::SEPARATOR

      || _la == SmalltalkParser::COMMENT) {
        setState(128);
        ws();
      }
      setState(131);
      variable();
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- DeclPairsContext ------------------------------------------------------------------

SmalltalkParser::DeclPairsContext::DeclPairsContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<SmalltalkParser::WsContext *> SmalltalkParser::DeclPairsContext::ws() {
  return getRuleContexts<SmalltalkParser::WsContext>();
}

SmalltalkParser::WsContext* SmalltalkParser::DeclPairsContext::ws(size_t i) {
  return getRuleContext<SmalltalkParser::WsContext>(i);
}

std::vector<SmalltalkParser::DeclPairContext *> SmalltalkParser::DeclPairsContext::declPair() {
  return getRuleContexts<SmalltalkParser::DeclPairContext>();
}

SmalltalkParser::DeclPairContext* SmalltalkParser::DeclPairsContext::declPair(size_t i) {
  return getRuleContext<SmalltalkParser::DeclPairContext>(i);
}


size_t SmalltalkParser::DeclPairsContext::getRuleIndex() const {
  return SmalltalkParser::RuleDeclPairs;
}

void SmalltalkParser::DeclPairsContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SmalltalkListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterDeclPairs(this);
}

void SmalltalkParser::DeclPairsContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SmalltalkListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitDeclPairs(this);
}


antlrcpp::Any SmalltalkParser::DeclPairsContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SmalltalkVisitor*>(visitor))
    return parserVisitor->visitDeclPairs(this);
  else
    return visitor->visitChildren(this);
}

SmalltalkParser::DeclPairsContext* SmalltalkParser::declPairs() {
  DeclPairsContext *_localctx = _tracker.createInstance<DeclPairsContext>(_ctx, getState());
  enterRule(_localctx, 6, SmalltalkParser::RuleDeclPairs);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(135);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == SmalltalkParser::SEPARATOR

    || _la == SmalltalkParser::COMMENT) {
      setState(134);
      ws();
    }
    setState(141); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(137);
      declPair();
      setState(139);
      _errHandler->sync(this);

      switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 7, _ctx)) {
      case 1: {
        setState(138);
        ws();
        break;
      }

      default:
        break;
      }
      setState(143); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while (_la == SmalltalkParser::KEYWORD);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- DeclPairContext ------------------------------------------------------------------

SmalltalkParser::DeclPairContext::DeclPairContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* SmalltalkParser::DeclPairContext::KEYWORD() {
  return getToken(SmalltalkParser::KEYWORD, 0);
}

SmalltalkParser::VariableContext* SmalltalkParser::DeclPairContext::variable() {
  return getRuleContext<SmalltalkParser::VariableContext>(0);
}

SmalltalkParser::WsContext* SmalltalkParser::DeclPairContext::ws() {
  return getRuleContext<SmalltalkParser::WsContext>(0);
}


size_t SmalltalkParser::DeclPairContext::getRuleIndex() const {
  return SmalltalkParser::RuleDeclPair;
}

void SmalltalkParser::DeclPairContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SmalltalkListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterDeclPair(this);
}

void SmalltalkParser::DeclPairContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SmalltalkListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitDeclPair(this);
}


antlrcpp::Any SmalltalkParser::DeclPairContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SmalltalkVisitor*>(visitor))
    return parserVisitor->visitDeclPair(this);
  else
    return visitor->visitChildren(this);
}

SmalltalkParser::DeclPairContext* SmalltalkParser::declPair() {
  DeclPairContext *_localctx = _tracker.createInstance<DeclPairContext>(_ctx, getState());
  enterRule(_localctx, 8, SmalltalkParser::RuleDeclPair);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(145);
    match(SmalltalkParser::KEYWORD);
    setState(147);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == SmalltalkParser::SEPARATOR

    || _la == SmalltalkParser::COMMENT) {
      setState(146);
      ws();
    }
    setState(149);
    variable();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ScriptContext ------------------------------------------------------------------

SmalltalkParser::ScriptContext::ScriptContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

SmalltalkParser::SequenceContext* SmalltalkParser::ScriptContext::sequence() {
  return getRuleContext<SmalltalkParser::SequenceContext>(0);
}

tree::TerminalNode* SmalltalkParser::ScriptContext::EOF() {
  return getToken(SmalltalkParser::EOF, 0);
}

std::vector<SmalltalkParser::WsContext *> SmalltalkParser::ScriptContext::ws() {
  return getRuleContexts<SmalltalkParser::WsContext>();
}

SmalltalkParser::WsContext* SmalltalkParser::ScriptContext::ws(size_t i) {
  return getRuleContext<SmalltalkParser::WsContext>(i);
}

std::vector<SmalltalkParser::PrimitiveContext *> SmalltalkParser::ScriptContext::primitive() {
  return getRuleContexts<SmalltalkParser::PrimitiveContext>();
}

SmalltalkParser::PrimitiveContext* SmalltalkParser::ScriptContext::primitive(size_t i) {
  return getRuleContext<SmalltalkParser::PrimitiveContext>(i);
}


size_t SmalltalkParser::ScriptContext::getRuleIndex() const {
  return SmalltalkParser::RuleScript;
}

void SmalltalkParser::ScriptContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SmalltalkListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterScript(this);
}

void SmalltalkParser::ScriptContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SmalltalkListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitScript(this);
}


antlrcpp::Any SmalltalkParser::ScriptContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SmalltalkVisitor*>(visitor))
    return parserVisitor->visitScript(this);
  else
    return visitor->visitChildren(this);
}

SmalltalkParser::ScriptContext* SmalltalkParser::script() {
  ScriptContext *_localctx = _tracker.createInstance<ScriptContext>(_ctx, getState());
  enterRule(_localctx, 10, SmalltalkParser::RuleScript);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(152);
    _errHandler->sync(this);

    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 10, _ctx)) {
    case 1: {
      setState(151);
      ws();
      break;
    }

    default:
      break;
    }
    setState(160);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 12, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        setState(154);
        primitive();
        setState(156);
        _errHandler->sync(this);

        switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 11, _ctx)) {
        case 1: {
          setState(155);
          ws();
          break;
        }

        default:
          break;
        } 
      }
      setState(162);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 12, _ctx);
    }
    setState(163);
    sequence();
    setState(165);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == SmalltalkParser::SEPARATOR

    || _la == SmalltalkParser::COMMENT) {
      setState(164);
      ws();
    }
    setState(167);
    match(SmalltalkParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- SequenceContext ------------------------------------------------------------------

SmalltalkParser::SequenceContext::SequenceContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

SmalltalkParser::TempsContext* SmalltalkParser::SequenceContext::temps() {
  return getRuleContext<SmalltalkParser::TempsContext>(0);
}

std::vector<SmalltalkParser::WsContext *> SmalltalkParser::SequenceContext::ws() {
  return getRuleContexts<SmalltalkParser::WsContext>();
}

SmalltalkParser::WsContext* SmalltalkParser::SequenceContext::ws(size_t i) {
  return getRuleContext<SmalltalkParser::WsContext>(i);
}

SmalltalkParser::PrimitiveContext* SmalltalkParser::SequenceContext::primitive() {
  return getRuleContext<SmalltalkParser::PrimitiveContext>(0);
}

SmalltalkParser::StatementsContext* SmalltalkParser::SequenceContext::statements() {
  return getRuleContext<SmalltalkParser::StatementsContext>(0);
}


size_t SmalltalkParser::SequenceContext::getRuleIndex() const {
  return SmalltalkParser::RuleSequence;
}

void SmalltalkParser::SequenceContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SmalltalkListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterSequence(this);
}

void SmalltalkParser::SequenceContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SmalltalkListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitSequence(this);
}


antlrcpp::Any SmalltalkParser::SequenceContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SmalltalkVisitor*>(visitor))
    return parserVisitor->visitSequence(this);
  else
    return visitor->visitChildren(this);
}

SmalltalkParser::SequenceContext* SmalltalkParser::sequence() {
  SequenceContext *_localctx = _tracker.createInstance<SequenceContext>(_ctx, getState());
  enterRule(_localctx, 12, SmalltalkParser::RuleSequence);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(189);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case SmalltalkParser::PIPE2:
      case SmalltalkParser::PIPE: {
        enterOuterAlt(_localctx, 1);
        setState(169);
        temps();
        setState(171);
        _errHandler->sync(this);

        switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 14, _ctx)) {
        case 1: {
          setState(170);
          ws();
          break;
        }

        default:
          break;
        }
        setState(174);
        _errHandler->sync(this);

        switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 15, _ctx)) {
        case 1: {
          setState(173);
          primitive();
          break;
        }

        default:
          break;
        }
        setState(177);
        _errHandler->sync(this);

        switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 16, _ctx)) {
        case 1: {
          setState(176);
          ws();
          break;
        }

        default:
          break;
        }
        setState(180);
        _errHandler->sync(this);
